fix white bar on the bottom because of horizontal scrollbar

--- a/src/client/site/styles.less
+++ b/src/client/site/styles.less
@@ -10,6 +10,7 @@ html {
   color: #2c261c;
   font-style: normal;
   font-weight: 300;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
